# Tortoise-BOT

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  algorithms.py  api.py  api_client.py  bot.py  botmessages.py  classes.py  config.json  config_handler.py  constants.py  database_handler.py  dictionary.py  log.txt  main.py  pyproject.toml  requirements.txt  tortoise.txt
.github/workflows/: pythonpackage.yml
bot/: __main__.py  api_client.py  async_file_logger_handler.py  bot.py  config_handler.py  constants.py  manager.py  non_blocking_file_handler.py
bot/cogs/: advent_of_code.py  afk.py  anti_raid.py  auto_role.py  bot_owner_commands.py  button_utility.py  captcha_verification.py  cmd_error_handler.py  defcon.py  documentation.py  fightCog.py  fun.py  games.py  github.py  giveaway.py  health.py  help.py  hermes.py  invite_tracker.py  join_manager.py  leaderboard.py  misc.py  moderation.py  music.py  other.py  piston.py  reddit.py  role_progression.py  roles.py  runtime.py  security.py  socket_comm.py  teams.py  tortoise_api.py  tortoise_dm.py  tortoise_mail.py  tortoise_server.py  utility.py  xkcd_helper.py
bot/configs/: banned_words.json
cogs/: admins.py  bot_owner_commands.py  captcha_verification.py  cmd_error_handler.py  fun.py  help.py  moderation.py  music.py  other.py  reddit.py  security.py  socket_comm.py  tortoise_api.py  tortoise_mail.py  tortoise_server.py  tortoise_server_old_TO_REFACTOR.py  verification.py
configs/: banned_words.json  bot_config.json
utils/: embed_handler.py
(+32 files in other folders)
